# SmartFCCS

./: CMakeLists.txt  README.md
include/SmartFCCS/: Camera.h  Core.h  DX11_Utility.h  Mesh.h  RHI.h  SmartFCCS.h  Window.h
src/: CMakeLists.txt  SmartFCCS.cpp  buffer.h  cmd.cpp  cmd.h  d3dx12.h  device.cpp  device.h  dx12_backend.cpp  dx12_backend.h  gpuresource.cpp  gpuresource.h  pch.h  pipeline.h  shader.cpp  swapchain.cpp  swapchain.h  texture.h  thirdparty.cpp  thirdparty.h  window.cpp  window.h
tutorials/01-InitializeDevice/: CMakeLists.txt  main.cpp
tutorials/02-DrawTriangle/: CMakeLists.txt  main.cpp  vs.hlsl
tutorials/03-Camera/: CMakeLists.txt  main.cpp  vs.hlsl
tutorials/03-RenderTexture/: CMakeLists.txt  main.cpp
tutorials/04-MultithreadedRendering/: CMakeLists.txt  main.cpp
